--- a/style.css
+++ b/style.css
@@ -89,11 +89,7 @@ nav a{
 
 
 }
-nav a:hover{
-	background-color: rgb(2,13,67);
-	color:white;
-	text-decoration-color: white;
-}
+
 .index-foto2{
 	display: inline;
 	width: 300px;
@@ -213,6 +209,43 @@ nav a:hover{
 	font-family: fontpalab;
 	font-size: 15pt;
 }
-.delAtletaSelect{
+.delAtletaSelect, .idAtletaEditSelect{
 	width: 200px;
 }
+.consultas-menu-box{
+	display: inline-block;
+	text-align: center;
+	width: 100%;
+	margin-top: 70px;
+	margin-bottom: 100px;
+}
+.btn-menu-consultas2,.btn-menu-consultas1{
+	font-family: fontpalab;
+	text-decoration: underline;
+	text-decoration-color: #000000;
+	display: inline-block;
+	margin-left: 70px;
+	margin-right: 70px;
+	font-size: 35pt;
+	letter-spacing: 4px;
+	background-color:  #ffe6ff;
+	border-style: solid;
+	border-width: 6px;
+	border-color: black;
+	padding: 15px;
+	opacity: 0.9;
+	border-radius: 25px;
+	width: 450px;
+	height: 70px;
+
+}
+.btn-menu-consultas2:hover,.btn-menu-consultas1:hover, nav a:hover {
+	background-color: rgb(2,13,67);
+	color:white;
+	text-decoration-color: white;
+	cursor: pointer;
+}
+.consultaDisciplinasContainer,.consultaAtletasContainer{
+	display: none;
+}
+
