--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
   font-family: fontpalab;
   src: url(Fonts/palab.ttf);
 }
+@font-face {
+  font-family: fontpalace;
+  src: url(Fonts/palace.ttf);
+}
 body{
 	background-color: #abb1d9;
 }
@@ -246,6 +250,45 @@ nav a{
 	cursor: pointer;
 }
 .consultaDisciplinasContainer,.consultaAtletasContainer{
+	width: 100%;
+	text-align: center;
 	display: none;
+	
+	
+
 }
+.ctaDisTable{
+	
+	display: inline-block;
+	margin-bottom: 50px;
+	border-collapse: collapse;
+	
+
+
+}
+.celdaimpar{
+	background-color: gray;
+}
+.celdapar{
+	background-color: lightgray;
+}
+.ctaDisTable tr,.ctaDisTable th, .ctaDisTable td{
+	text-align: center;
+	border-collapse: collapse;
+	border-style: solid;
+	border-width: 2px;
+	border-color: black;
+	padding: 4px;
+	width: 150px;
+	overflow: hidden;
+
+	
+}
+.ctaDisTit{
+	margin-top: -55px;
+	font-family: fontpalace;
+	font-size: 55pt;
+	letter-spacing: 3px;
+}
+
 
